etapa 3 - entrega sin oferta 17/10

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         </activity>
         <activity android:name=".Lista_plato">
         </activity>
+        <receiver android:name=".Broadcast_Oferta"/>
     </application>
 
 </manifest>
