--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,11 +22,9 @@
         </activity>
         <activity android:name=".Lista_plato">
         </activity>
-        <receiver android:name=".Broadcast_Oferta"/>
-
         <receiver android:name=".Broadcast_Oferta">
             <intent-filter>
-                <action android:name="android.intent.EVENTO">
+                <action android:name="lanzar">
                 </action>
             </intent-filter>
         </receiver>
