--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,11 +24,13 @@
         </activity>
         <receiver android:name=".Broadcast_Oferta">
             <intent-filter>
-                <action android:name="lanzar">
+                <action android:name="android.intent.EVENTO">
                 </action>
             </intent-filter>
         </receiver>
 
     </application>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
