--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         </activity>
         <receiver android:name=".Broadcast_Oferta">
             <intent-filter>
-                <action android:name="android.intent.EVENTO">
+                <action android:name="lanzar">
                 </action>
             </intent-filter>
         </receiver>
