--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".alta_Pedido"></activity>
+        <activity android:name=".visualizar_Platos"></activity>
+        <activity android:name=".alta_Pedido" />
         <activity android:name=".busquedaPlato" />
         <activity android:name=".home">
             <intent-filter>
